--- a/shop.html
+++ b/shop.html
@@ -59,7 +59,7 @@
           </div>
           <a href="#"><i class="bx bx-cart cart"></i></a>
         </div>
-        <div class="pro">
+        <div class="pro" onclick="window.location.href='sproduct.html';">
           <img class="shirt" src="img/products/f2.jpg" alt="" />
           <div class="des">
             <span>adidas</span>
