--- a/shop.html
+++ b/shop.html
@@ -75,7 +75,7 @@
           </div>
           <a href="#"><i class="bx bx-cart cart"></i></a>
         </div>
-        <div class="pro">
+        <div class="pro" onclick="window.location.href='sproduct.html';">
           <img class="shirt" src="img/products/f3.jpg" alt="" />
           <div class="des">
             <span>adidas</span>
@@ -91,7 +91,7 @@
           </div>
           <a href="#"><i class="bx bx-cart cart"></i></a>
         </div>
-        <div class="pro">
+        <div class="pro" onclick="window.location.href='sproduct.html';">
           <img class="shirt" src="img/products/f4.jpg" alt="" />
           <div class="des">
             <span>adidas</span>
@@ -107,7 +107,7 @@
           </div>
           <a href="#"><i class="bx bx-cart cart"></i></a>
         </div>
-        <div class="pro">
+        <div class="pro" onclick="window.location.href='sproduct.html';">
           <img class="shirt" src="img/products/f5.jpg" alt="" />
           <div class="des">
             <span>adidas</span>
@@ -123,7 +123,7 @@
           </div>
           <a href="#"><i class="bx bx-cart cart"></i></a>
         </div>
-        <div class="pro">
+        <div class="pro" onclick="window.location.href='sproduct.html';">
           <img class="shirt" src="img/products/f6.jpg" alt="" />
           <div class="des">
             <span>adidas</span>
@@ -139,7 +139,7 @@
           </div>
           <a href="#"><i class="bx bx-cart cart"></i></a>
         </div>
-        <div class="pro">
+        <div class="pro" onclick="window.location.href='sproduct.html';">
           <img class="shirt" src="img/products/f7.jpg" alt="" />
           <div class="des">
             <span>adidas</span>
@@ -155,7 +155,7 @@
           </div>
           <a href="#"><i class="bx bx-cart cart"></i></a>
         </div>
-        <div class="pro">
+        <div class="pro" onclick="window.location.href='sproduct.html';">
           <img class="shirt" src="img/products/f8.jpg" alt="" />
           <div class="des">
             <span>adidas</span>
@@ -172,7 +172,7 @@
           <a href="#"><i class="bx bx-cart cart"></i></a>
         </div>
 
-        <div class="pro">
+        <div class="pro" onclick="window.location.href='sproduct.html';">
           <img class="shirt" src="img/products/n1.jpg" alt="" />
           <div class="des">
             <span>adidas</span>
@@ -188,7 +188,7 @@
           </div>
           <a href="#"><i class="bx bx-cart cart"></i></a>
         </div>
-        <div class="pro">
+        <div class="pro" onclick="window.location.href='sproduct.html';">
           <img class="shirt" src="img/products/n2.jpg" alt="" />
           <div class="des">
             <span>adidas</span>
@@ -204,7 +204,7 @@
           </div>
           <a href="#"><i class="bx bx-cart cart"></i></a>
         </div>
-        <div class="pro">
+        <div class="pro" onclick="window.location.href='sproduct.html';">
           <img class="shirt" src="img/products/n3.jpg" alt="" />
           <div class="des">
             <span>adidas</span>
@@ -220,7 +220,7 @@
           </div>
           <a href="#"><i class="bx bx-cart cart"></i></a>
         </div>
-        <div class="pro">
+        <div class="pro" onclick="window.location.href='sproduct.html';">
           <img class="shirt" src="img/products/n4.jpg" alt="" />
           <div class="des">
             <span>adidas</span>
@@ -236,7 +236,7 @@
           </div>
           <a href="#"><i class="bx bx-cart cart"></i></a>
         </div>
-        <div class="pro">
+        <div class="pro" onclick="window.location.href='sproduct.html';">
           <img class="shirt" src="img/products/n5.jpg" alt="" />
           <div class="des">
             <span>adidas</span>
@@ -252,7 +252,7 @@
           </div>
           <a href="#"><i class="bx bx-cart cart"></i></a>
         </div>
-        <div class="pro">
+        <div class="pro" onclick="window.location.href='sproduct.html';">
           <img class="shirt" src="img/products/n6.jpg" alt="" />
           <div class="des">
             <span>adidas</span>
@@ -268,7 +268,7 @@
           </div>
           <a href="#"><i class="bx bx-cart cart"></i></a>
         </div>
-        <div class="pro">
+        <div class="pro" onclick="window.location.href='sproduct.html';">
           <img class="shirt" src="img/products/n7.jpg" alt="" />
           <div class="des">
             <span>adidas</span>
@@ -284,7 +284,7 @@
           </div>
           <a href="#"><i class="bx bx-cart cart"></i></a>
         </div>
-        <div class="pro">
+        <div class="pro" onclick="window.location.href='sproduct.html';">
           <img class="shirt" src="img/products/n8.jpg" alt="" />
           <div class="des">
             <span>adidas</span>
@@ -409,7 +409,8 @@
           // Save back to localStorage
           localStorage.setItem("cartItems", JSON.stringify(cart));
 
-          alert(`✅ ${product.name} added to Cart!`);
+          alert(`✅ ${product.name} added to Cart! `);
+          alert(" But select a size first."); // Notify user
         });
       });
     </script>
