--- a/shop.html
+++ b/shop.html
@@ -397,7 +397,7 @@
             name: productCard.querySelector("h5").innerText,
             price: productCard.querySelector("h4").innerText,
             image: productCard.querySelector("img").src,
-            quantity: 1,
+            quantity: parseInt(quantity, 10),
           };
 
           // Get existing cart or create new
@@ -411,6 +411,21 @@
 
           alert(`✅ ${product.name} added to Cart! `);
           alert(" But select a size first."); // Notify user
+
+          // Send data to Evergage
+          if (window.SalesforceInteractions) {
+            Evergage.sendEvent("AddToCart", {
+              product: {
+                name: name,
+                price: price,
+                imageUrl: image,
+                size: size,
+                quantity: quantity,
+              },
+            });
+          } else {
+            console.warn("Evergage is not defined");
+          }
         });
       });
     </script>
