--- a/index.html
+++ b/index.html
@@ -457,6 +457,30 @@
     <script>
       document.addEventListener("DOMContentLoaded", () => {
         // Select the Shop link
+        const shopLink = document.querySelector('a[href="index.html"]');
+
+        // Add a click event listener
+        shopLink.addEventListener("click", (event) => {
+          event.preventDefault();
+
+          console.log("Home link clicked!");
+
+          // 👉 Example: send event to SalesforceInteractions
+          if (window.SalesforceInteractions) {
+            window.SalesforceInteractions.sendEvent({
+              interaction: {
+                name: "Home Page",
+              },
+            });
+          }
+
+          // continue with navigation (if you stopped it above)
+          window.location.href = shopLink.getAttribute("href");
+        });
+      });
+
+      document.addEventListener("DOMContentLoaded", () => {
+        // Select the Shop link
         const shopLink = document.querySelector('a[href="shop.html"]');
 
         // Add a click event listener
