--- a/index.html
+++ b/index.html
@@ -456,25 +456,89 @@
 
     <script>
       document.addEventListener("DOMContentLoaded", () => {
-        const navLinks = document.querySelectorAll("#navbar a");
-
-        navLinks.forEach((link) => {
-          link.addEventListener("click", function (event) {
+        // HOME
+        document
+          .querySelector('a[href="index.html"]')
+          .addEventListener("click", function (event) {
             event.preventDefault();
+            console.log("Home page clicked!");
+            if (window.SalesforceInteractions) {
+              window.SalesforceInteractions.sendEvent({
+                interaction: { name: "Home page" },
+              });
+            }
+            window.location.href = this.getAttribute("href");
+          });
 
-            console.log(`${this.textContent} link clicked!`);
+        // SHOP
+        document
+          .querySelector('a[href="shop.html"]')
+          .addEventListener("click", function (event) {
+            event.preventDefault();
+            console.log("Shop page clicked!");
+            if (window.SalesforceInteractions) {
+              window.SalesforceInteractions.sendEvent({
+                interaction: { name: "Shop page" },
+              });
+            }
+            window.location.href = this.getAttribute("href");
+          });
+
+        // BLOG
+        document
+          .querySelector('a[href="blog.html"]')
+          .addEventListener("click", function (event) {
+            event.preventDefault();
+            console.log("Blog page clicked!");
+            if (window.SalesforceInteractions) {
+              window.SalesforceInteractions.sendEvent({
+                interaction: { name: "Blog page" },
+              });
+            }
+            window.location.href = this.getAttribute("href");
+          });
+
+        // ABOUT
+        document
+          .querySelector('a[href="about.html"]')
+          .addEventListener("click", function (event) {
+            event.preventDefault();
+            console.log("About page clicked!");
+            if (window.SalesforceInteractions) {
+              window.SalesforceInteractions.sendEvent({
+                interaction: { name: "About page" },
+              });
+            }
+            window.location.href = this.getAttribute("href");
+          });
+
+        // CONTACT
+        document
+          .querySelector('a[href="contact.html"]')
+          .addEventListener("click", function (event) {
+            event.preventDefault();
+            console.log("Contact page clicked!");
+            if (window.SalesforceInteractions) {
+              window.SalesforceInteractions.sendEvent({
+                interaction: { name: "Contact page" },
+              });
+            }
+            window.location.href = this.getAttribute("href");
+          });
+
+        // CART
+        document
+          .querySelector('a[href="cart.html"]')
+          .addEventListener("click", function (event) {
+            event.preventDefault();
 
             if (window.SalesforceInteractions) {
               window.SalesforceInteractions.sendEvent({
-                interaction: {
-                  name: "Home page",
-                },
+                interaction: { name: "Cart page" },
               });
             }
-
             window.location.href = this.getAttribute("href");
           });
-        });
       });
     </script>
   </body>
