--- a/shop.html
+++ b/shop.html
@@ -391,82 +391,50 @@
       const cartButtons = document.querySelectorAll(".cart");
 
       cartButtons.forEach((btn) => {
-          btn.addEventListener("click", (event) => {
-            event.preventDefault();
-            const productCard = btn.closest(".pro");
-            const name = productCard.querySelector("h5").innerText.trim();
-            const priceText = productCard.querySelector("h4").innerText || "";
-            const price = parseFloat(priceText.replace(/[^0-9.]/g, "")) || null;
-            const image = productCard.querySelector("img").src;
-            const id =
-              productCard.dataset.productId ||
-              name.toLowerCase().replace(/\s+/g, "-");
-
-            const product = {
-              name,
-              price: priceText,
-              image,
-              quantity: 1,
-            };
-
-            let cart = JSON.parse(localStorage.getItem("cartItems")) || [];
-            cart.push(product);
-            localStorage.setItem("cartItems", JSON.stringify(cart));
-
-            // ---------- send AddToCart to Personalization ----------
-            if (
-              window.SalesforceInteractions &&
-              SalesforceInteractions.sendEvent
-            ) {
-              SalesforceInteractions.sendEvent({
-                interaction: {
-                  name: SalesforceInteractions.CartInteractionName.AddToCart,
-                  lineItem: {
-                    catalogObjectType: "product",
-                    catalogObjectId: id,
-                    quantity: 1,
-                    price: price,
-                    attributes: { name: name, imageUrl: image },
-                  },
-                  source: {
-                    channel: "Web",
-                    pageType: "PLP",
-                    url: window.location.href,
-                  },
-                },
-              });
-              console.log("Personalization: sent AddToCart for", id);
-            }
-
-            alert(`${name} added to cart`);
-          });
-
+        btn.addEventListener("click", function (event) {
+          // Prevent the default link behavior (like navigating to '#')
           event.preventDefault();
+          event.stopPropagation(); // Also stop the event from bubbling up to the product card click
 
-          // Find the product card of ONLY the clicked button
-          let productCard = btn.closest(".pro");
+          const productCard = btn.closest(".pro");
+          const name = productCard.querySelector("h5").innerText.trim();
+          const priceText = productCard.querySelector("h4").innerText || "";
+          const price = parseFloat(priceText.replace(/[^0-9.]/g, "")) || null;
+          const image = productCard.querySelector("img").src;
+          const id =
+            productCard.dataset.productId ||
+            name.toLowerCase().replace(/\s+/g, "-");
 
-          // Extract product details
-          let product = {
-            name: productCard.querySelector("h5").innerText,
-            price: productCard.querySelector("h4").innerText,
-            image: productCard.querySelector("img").src,
-            quantity: parseInt(quantity, 10),
+          const product = {
+            name,
+            price: priceText,
+            image,
+            quantity: 1,
           };
 
-          // Get existing cart or create new
           let cart = JSON.parse(localStorage.getItem("cartItems")) || [];
-
-          // Add this one product
           cart.push(product);
-
-          // Save back to localStorage
           localStorage.setItem("cartItems", JSON.stringify(cart));
 
-          // alert(`✅ ${product.name} added to Cart! `);
-          alert(" Select a size first."); // Notify user
+          // ---------- send AddToCart to Personalization ----------
+          if (window.Evergage) {
+            window.Evergage.push(function (evergage) {
+              evergage.sendEvent({
+                action: "AddToCart",
+                catalogObjectId: id,
+                catalogObjectType: "product",
+                quantity: 1,
+                price: price,
+                attributes: {
+                  name: name,
+                  imageUrl: image,
+                },
+              });
+            });
+            console.log("Evergage: sent AddToCart for", id);
+          }
 
-          // Send data to Evergage
+          alert(`${name} added to cart`);
         });
       });
     </script>
