--- a/shop.html
+++ b/shop.html
@@ -387,76 +387,68 @@
     <script src="script.js"></script>
 
     <script>
-      // Select all cart buttons
-      const cartButtons = document.querySelectorAll(".cart");
-
-      cartButtons.forEach((btn) => {
-        btn.addEventListener("click", function (event) {
-          // Prevent the default link behavior (like navigating to '#')
-          event.preventDefault();
-          event.stopPropagation(); // Also stop the event from bubbling up to the product card click
-
-          const productCard = btn.closest(".pro");
-          const name = productCard.querySelector("h5").innerText.trim();
-          const priceText = productCard.querySelector("h4").innerText || "";
-          const price = parseFloat(priceText.replace(/[^0-9.]/g, "")) || null;
-          const image = productCard.querySelector("img").src;
-          const id =
-            productCard.dataset.productId ||
-            name.toLowerCase().replace(/\s+/g, "-");
-
-          const product = {
-            name,
-            price: priceText,
-            image,
-            quantity: 1,
-          };
-
-          let cart = JSON.parse(localStorage.getItem("cartItems")) || [];
-          cart.push(product);
-          localStorage.setItem("cartItems", JSON.stringify(cart));
-
-          // ---------- send AddToCart to Personalization ----------
-          if (window.Evergage) {
-            window.Evergage.push(function (evergage) {
-              evergage.sendEvent({
-                action: "AddToCart",
-                catalogObjectId: id,
-                catalogObjectType: "product",
-                quantity: 1,
-                price: price,
-                attributes: {
-                  name: name,
-                  imageUrl: image,
-                },
-              });
-            });
-            console.log("Evergage: sent AddToCart for", id);
-          }
-
-          alert(`${name} added to cart`);
-        });
-      });
-    </script>
-
-    <script>
       document.addEventListener("DOMContentLoaded", () => {
         document.querySelectorAll(".pro").forEach((card) => {
-          // skip if clicked on the cart icon
           card.addEventListener("click", function (e) {
-            if (e.target.closest(".cart")) return;
+            // If clicked on the cart icon, handle cart addition
+            if (e.target.closest(".cart")) {
+              e.preventDefault();
+              e.stopPropagation();
 
+              const name = this.querySelector("h5").innerText.trim();
+              const priceText = this.querySelector("h4").innerText || "";
+              const price =
+                parseFloat(priceText.replace(/[^0-9.]/g, "")) || null;
+              const image = this.querySelector("img").src;
+              const id =
+                this.dataset.productId ||
+                name.toLowerCase().replace(/\s+/g, "-");
+
+              const product = {
+                name,
+                price: priceText,
+                image,
+                quantity: 1,
+              };
+
+              let cart = JSON.parse(localStorage.getItem("cartItems")) || [];
+              cart.push(product);
+              localStorage.setItem("cartItems", JSON.stringify(cart));
+
+              // Send AddToCart event
+              if (window.Evergage) {
+                window.Evergage.push(function (evergage) {
+                  evergage.sendEvent({
+                    action: "AddToCart",
+                    catalogObjectId: id,
+                    catalogObjectType: "product",
+                    quantity: 1,
+                    price: price,
+                    attributes: {
+                      name: name,
+                      imageUrl: image,
+                    },
+                  });
+                });
+                console.log("Evergage: sent AddToCart for", id);
+              }
+
+              alert(`${name} added to cart`);
+              return; // Stop here, don't navigate to product page
+            }
+
+            // If clicked anywhere else on the product card, go to product page
             const name = this.querySelector("h5").innerText.trim();
             const priceText = this.querySelector("h4").innerText || "";
             const price = parseFloat(priceText.replace(/[^0-9.]/g, "")) || null;
             const id =
               this.dataset.productId || name.toLowerCase().replace(/\s+/g, "-");
 
-            // FIXED: Use Evergage instead of SalesforceInteractions
+            // Send Product View event
             if (window.Evergage) {
               window.Evergage.push(function (evergage) {
                 evergage.sendEvent({
-                  action: "Product Quick View", // Changed to clear action name
+                  action: "Product View Click",
                   catalogObjectId: id,
                   catalogObjectType: "product",
                   attributes: {
@@ -465,7 +457,7 @@
                   },
                 });
               });
-              console.log("Evergage: Product Quick View sent for", id);
+              console.log("Evergage: Product View Click sent for", id);
             }
 
             // navigate to product page
